# phoenix-auth

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: actions.yml  publish.yml  pullRequest.yml
src/: App.vue  main.ts  styles.scss
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  database_test.rs  encryption.rs  lib.rs  main.rs  otp_exporter.rs  otp_parser.rs  state.rs  sync.rs  sync_api.rs  sync_api_test.rs  sync_local.rs  totp.rs
src-tauri/src/database/: m2024_03_31_account_creation.rs  m2024_04_01_account_timeout_algorithm.rs  m2024_07_01_sync_account_creation.rs  m2024_07_15_account_sync_details.rs  m2024_09_13_soft_delete_accounts.rs  m2024_09_15_remove_sync_error_log.rs  m2025_01_22_migrate_encryption.rs  m2025_02_08_settings.rs  m2025_02_18_account_colours.rs
src/components/: AccountList.vue  NewAccount.vue  OneTimePassword.vue  PageFooter.vue  PageHeader.vue  Search.vue  Theme.vue
src/components/accounts/: AccountButton.vue  AccountForm.vue  AccountImportPage.vue  AccountItem.vue  AccountList.vue  AccountPage.vue  AccountSearch.vue  CountdownTimer.vue  DeleteAccount.vue  NewAccount.vue  OneTimePassword.vue
src/components/settings/: AppearanceSettings.vue  SettingsList.vue  SettingsPage.vue
src/components/settings/imports/: AccountImportPage.vue  ImportResultMessage.vue  ImportSelector.vue  ImportTable.vue
src/components/settings/sync/: AccountSyncPage.vue  SyncLogTable.vue
src/composables/: Commands.ts  Generics.ts  Importers.ts  OperatingSystem.ts
src/tests/: AccountList.test.ts  NewAccount.test.ts  OneTimePassword.test.ts
src/tests/accounts/: AccountButton.test.ts  AccountForm.test.ts  AccountItem.test.ts  AccountList.test.ts  CountdownTimer.test.ts  DeleteAccount.test.ts  NewAccount.test.ts  OneTimePassword.test.ts
src/tests/settings/: AppearanceSettings.test.ts  SettingsPage.test.ts
src/tests/settings/imports/: ImportResultMessage.test.ts  ImportSelector.test.ts  ImportTable.test.ts
src/tests/settings/sync/: AccountSyncPage.test.ts  SyncLogTable.test.ts
