[package]
name = "phoenix-auth"
version = "0.2.1"
description = "A Desktop 2FA Application"
authors = ["Liam Hackett"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "path-all", "fs-write-file", "updater", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libotp = { git = "https://github.com/liamh101/otp.git", branch = "master" }
rusqlite = { version = "0.32.1", features = ["bundled", "array"] }
magic-crypt = "3.1.13"
dotenv_codegen = "0.15.0"
urlencoding = "2.1.3"
reqwest = { version = "0.12.5", features = ["json"] }
httpmock = "0.7.0"
tokio = "1.37.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
