[package]
name = "phoenix-auth"
version = "0.8.0"
description = "A Desktop 2FA Application"
authors = ["Liam Hackett"]
edition = "2021"

[lib]
name = "phoenix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libotp = { git = "https://github.com/liamh101/otp.git", branch = "master" }
rusqlite = { version = "0.33.0", features = ["bundled", "array"] }
magic-crypt = "4.0.1"
dotenv_codegen = "0.15.0"
urlencoding = "2.1.3"
reqwest = { version = "0.12.5", features = ["json"] }
httpmock = "0.7.0"
tokio = "1.37.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
regex = "1.11.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
